# rust-job-server

./: Cargo.toml  config.toml  docker-compose.yml
crates/application/: Cargo.toml
crates/application/src/: lib.rs  notifier.rs  queue.rs  usecase.rs
crates/application/src/notifier/: email_notifier.rs
crates/application/src/queue/: aggregation_queue.rs  queue.rs  user_export_queue.rs
crates/application/src/repository/: repository.rs  user_repository.rs
crates/application/src/usecase/: aggregation.rs  user_export.rs
crates/application/src/usecase/aggregation/: aggregation_from_file_interactor.rs  aggregation_input.rs  aggregation_output.rs  aggregation_usecase.rs  async_aggregation_interactor.rs
crates/application/src/usecase/user_export/: async_user_export_interactor.rs  user_export_from_file_interactor.rs  user_export_input.rs  user_export_output.rs  user_export_usecase.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/cli/: aggregation.rs  completion.rs  register.rs  root.rs  server.rs  user_export.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs  queue.rs
crates/core/src/model/: plan.rs  user.rs
crates/core/src/queue/: example_queue.rs
crates/core/src/value_object/: example.rs  price.rs
crates/di/: Cargo.toml
crates/di/src/: cli_container.rs  factory.rs  job_container.rs  lib.rs
crates/di/src/factory/: aggregation_handler_factory.rs  aggregation_worker_factory.rs  server_factory.rs  user_export_handler_factory.rs  user_export_worker_factory.rs
crates/infrastracture/: Cargo.toml
crates/infrastracture/src/: queue.rs
crates/infrastracture/src/queue/: aws_sqs_modules.rs  dto.rs  sqs_example_queue.rs
crates/infrastracture/src/queue/dto/: example_dto.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: job.rs  lib.rs  repository.rs
crates/infrastructure/src/job/: queue.rs  server.rs  worker.rs
crates/infrastructure/src/job/queue/: dto.rs  factory.rs  sqs.rs  sqs_queue.rs
crates/infrastructure/src/job/queue/dto/: aggregation_dto.rs  user_export_dto.rs
crates/infrastructure/src/job/queue/factory/: sqs_client_factory.rs
crates/infrastructure/src/job/queue/sqs/: client.rs  sqs_aggregation_queue.rs  sqs_user_export_queue.rs
crates/infrastructure/src/job/worker/: aggregation_worker.rs  user_export_worker.rs
crates/infrastructure/src/repository/: file_user_repository.rs
crates/interface/: Cargo.toml
crates/interface/src/: job.rs  lib.rs
crates/interface/src/cli/: handler.rs
crates/interface/src/cli/handler/: aggregation.rs  example_handler.rs  user_export.rs
crates/interface/src/cli/handler/aggregation/: aggregation_handler.rs
crates/interface/src/cli/handler/user_export/: user_export_handler.rs
crates/interface/src/job/: handler.rs  server.rs  worker.rs
crates/interface/src/job/handler/aggregation/: aggregation_handler.rs
crates/interface/src/job/handler/user_export/: user_export_handler.rs
crates/service/: Cargo.toml
crates/service/src/: service.rs
crates/service/src/service/: register_service.rs  server_service.rs
docker/localstack/: init-queue.sh
