[package]
name = "rust-job-server-application"
description = "Simple Rust Job Server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/haytty/rust-job-server"
repository = "https://github.com/haytty/rust-job-server.git"
keywords = ["job", "server", "sqs", "aws"]
categories = ["web-programming"]
authors = ["haytty"]


[dependencies]
shaku = { version = "0.6.2", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
rust-job-server-core = { path = "../core" }
getset = "0.1.5"
async-trait = { version = "0.1.88" }
anyhow = "1.0.98"
tracing = "0.1.41"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"