[package]
name = "rust-job-server-core"
description = "Simple Rust Job Server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/haytty/rust-job-server"
repository = "https://github.com/haytty/rust-job-server.git"
keywords = ["job", "server", "sqs", "aws"]
categories = ["web-programming"]
authors = ["haytty"]


[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["default"] }
derive_more = { version = "2.0.1", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
getset = { version = "0.1.5", features = [] }
