[package]
name = "rust-job-server-di"
description = "Simple Rust Job Server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/haytty/rust-job-server"
repository = "https://github.com/haytty/rust-job-server.git"
keywords = ["job", "server", "sqs", "aws"]
categories = ["web-programming"]
authors = ["haytty"]


[dependencies]
rust-job-server-service = { path = "../service" }
rust-job-server-config = { path = "../config" }
rust-job-server-infrastructure = { path = "../infrastracture" }
shaku = { version = "0.6.2", features = ["derive"] }
anyhow = "1.0.98"
aws-sdk-sqs = { version = "1.64.0", features = ["default"] }
aws-config = { version = "1.6.1", features = ["default"] }
url = "2.5.4"



