[package]
name = "rust-job-server-infrastructure"
description = "Simple Rust Job Server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/haytty/rust-job-server"
repository = "https://github.com/haytty/rust-job-server.git"
keywords = ["job", "server", "sqs", "aws"]
categories = ["web-programming"]
authors = ["haytty"]


[dependencies]
aws-sdk-sqs = { version = "1.64.0", features = ["default"] }
aws-config = "1.6.1"
anyhow = "1.0.98"
tokio = { version = "1.44.2", features = ["full"] }
rust-job-server-core = { path = "../core" }
derive_more = { version = "2.0.1", features = ["full"] }
async-trait = "0.1.88"
url = "2.5.4"
serde = "1.0.219"
serde_json = "1.0.140"
getset = "0.1.5"