[package]
name = "rust-job-server-interface"
description = "Simple Rust Job Server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/haytty/rust-job-server"
repository = "https://github.com/haytty/rust-job-server.git"
keywords = ["job", "server", "sqs", "aws"]
categories = ["web-programming"]
authors = ["haytty"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
tracing = "0.1.41"
shaku = "0.6.2"
rust-job-server-application = { path = "../application" }
derive_more = { version = "2.0.1", features = ["full"] }
getset = "0.1.5"
thiserror = "2.0.12"


