[package]
name = "rust-job-server-service"
description = "Simple Rust Job Server"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/haytty/rust-job-server"
repository = "https://github.com/haytty/rust-job-server.git"
keywords = ["job", "server", "sqs", "aws"]
categories = ["web-programming"]
authors = ["haytty"]


[dependencies]
shaku = { version = "0.6.2", features = ["derive"] }
rust-job-server-core = { path = "../core" }
async-trait = { version = "0.1.88" }
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"